--- a/qt-ui/plannerSettings.ui
+++ b/qt-ui/plannerSettings.ui
@@ -359,13 +359,30 @@
            </widget>
           </item>
           <item row="0" column="1">
-           <widget class="QCheckBox" name="recreational_mode">
+           <widget class="QRadioButton" name="recreational_deco">
             <property name="text">
              <string>Recreational mode</string>
             </property>
            </widget>
           </item>
           <item row="1" column="1">
+           <widget class="QRadioButton" name="buehlmann_deco">
+            <property name="text">
+             <string>Buehlmann deco</string>
+            </property>
+            <property name="checked">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="1">
+           <widget class="QRadioButton" name="vpmb_deco">
+            <property name="text">
+             <string>VPM-B deco</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="1">
            <widget class="QCheckBox" name="safetystop">
             <property name="text">
              <string>Safety stop</string>
@@ -375,14 +392,14 @@
             </property>
            </widget>
           </item>
-          <item row="2" column="1">
+          <item row="4" column="1">
            <widget class="QLabel" name="label_3">
             <property name="text">
              <string>Reserve gas</string>
             </property>
            </widget>
           </item>
-          <item row="2" column="2">
+          <item row="4" column="2">
            <widget class="QSpinBox" name="reserve_gas">
             <property name="suffix">
              <string>bar</string>
